// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook globalStylesDecorator should render story with global styles in document head 1`] = `
<head>
  <style
    data-styled="active"
    data-styled-version="5.1.1"
  >
    html{line-height:1.15;-webkit-text-size-adjust:100%;}
    body{margin:0;}
    main{display:block;}
    h1{font-size:2em;margin:0.67em 0;}
    hr{box-sizing:content-box;height:0;overflow:visible;}
    pre{font-family:monospace,monospace;font-size:1em;}
    a{background-color:transparent;}
    abbr[title]{border-bottom:none;-webkit-text-decoration:underline;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted;}
    b,strong{font-weight:bolder;}
    code,kbd,samp{font-family:monospace,monospace;font-size:1em;}
    small{font-size:80%;}
    sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}
    sub{bottom:-0.25em;}
    sup{top:-0.5em;}
    img{border-style:none;}
    button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0;}
    button,input{overflow:visible;}
    button,select{text-transform:none;}
    button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button;}
    button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0;}
    button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText;}
    fieldset{padding:0.35em 0.75em 0.625em;}
    legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal;}
    progress{vertical-align:baseline;}
    textarea{overflow:auto;}
    [type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0;}
    [type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto;}
    [type="search"]{-webkit-appearance:textfield;outline-offset:-2px;}
    [type="search"]::-webkit-search-decoration{-webkit-appearance:none;}
    ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit;}
    details{display:block;}
    summary{display:list-item;}
    template{display:none;}
    [hidden]{display:none;}
    html{box-sizing:border-box;font-size:62.5%;font-family:'Oleo Script',cursive;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-o-font-feature-settings:'salt' 1;-ms-font-feature-settings:'salt' 1;-webkit-font-smoothing:antialiased;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;-moz-osx-font-smoothing:grayscale;-moz-font-feature-settings:'salt' 1;-webkit-font-feature-settings:'salt' 1;font-feature-settings:'salt' 1;text-rendering:optimizeLegibility;}
    *,*:before,*:after{box-sizing:inherit;}
    body{margin:0;padding:0;}
  </style>
</head>
`;

exports[`storybook globalStylesDecorator should render story with global styles in document head 2`] = `
<div>
  test
</div>
`;

exports[`storybook pageBackground should render story within a wrapper element with background image 1`] = `
<div
  className="sc-AxjAm fAxUdK"
>
  <div>
    test
  </div>
</div>
`;
